#10950: Remove backup from configuration